# local-code-pilot

./: .coverage  Dockerfile  Makefile  README.md  auralsp_telemetry.db  docker-compose.yml  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
config/: default.json
eval/: eval_harness.py
eval/results/: ablation_study.csv  ablation_study.md  ablation_summary.json  latency_profile.csv
neovim/: auralsp.lua
scripts/: profile_latency.py  test_connection.py
src/: __init__.py  ast_indexer.py  call_graph.py  config.py  debounce.py  dirty_watcher.py  embedder.py  fim_builder.py  knapsack_allocator.py  metrics_api.py  ollama_client.py  server.py  telemetry.py
tests/: test_ast_indexer.py  test_call_graph.py  test_config.py  test_debounce.py  test_eval_metrics.py  test_fim_builder.py  test_knapsack_allocator.py  test_telemetry.py
