[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "auralsp"
version = "1.0.0"
description = "A local, workspace-aware code intelligence LSP engine"
requires-python = ">=3.10"
dependencies = [
    "pygls==1.3.1",
    "lsprotocol==2023.0.1",
    "httpx==0.27.0",
    "tree-sitter==0.21.3",
    "tree-sitter-python==0.21.0",
    "sentence-transformers==3.0.1",
    "numpy==1.26.4",
    "tiktoken==0.7.0",
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "watchfiles==0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
]

[project.scripts]
auralsp = "src.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
